<?xml version='1.0' encoding='UTF-8'?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyMetro Operator</string>
    <string name="app_logo">MyMetro Operator</string>
    <string name="shortcut_start">Start service</string>
    <string name="shortcut_stop">Stop service</string>
    <string name="shortcut_sos">Send SOS</string>
    <string name="channel_default">Primary Channel</string>

    <string name="menu_status">Status</string>
    <string name="menu_info">Info</string>
    <string name="menu_shortcuts">Add shortcuts</string>
    <string name="menu_clear">Clear</string>
    <string name="status_service_create">Service started</string>
    <string name="status_service_destroy">Service stopped</string>
    <string name="status_send_success">Send successfully</string>
    <string name="status_send_fail">Send failed</string>
    <string name="status_location_update">Location update</string>
    <string name="status_network_online">Network online</string>
    <string name="status_network_offline">Network offline</string>
    <string name="hidden_app_name">Device Settings</string>
    <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
    <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
    <string name="request_exception">To continuously collect location data please turn off battery optimization for the app.</string>
    <string name="request_background">To continuously collect location data please enable \"%s\" permission.</string>
    <string name="request_background_option">Allow all the time</string>
    <string name="title_activity_main">MyMetro Operator</string>
    <string name="title_home">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_info">Info</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>

    <!-- Traccar Preferences -->
    <string name="settings_category_traccar">Transitclock</string>
    <string name="settings_id_title">Vehicle/Block ID</string>
    <string name="settings_url_title">Server URL</string>
    <string name="settings_url_summary">Tracking server URL</string>
    <string name="settings_interval_title">Frequency</string>
    <string name="settings_interval_summary">Reporting interval in seconds</string>
    <string name="settings_distance_title">Distance</string>
    <string name="settings_distance_summary">Reporting distance in meters</string>
    <string name="settings_angle_title">Angle</string>
    <string name="settings_angle_summary">Reporting angle in degrees</string>
    <string name="settings_status_title">Service status</string>
    <string name="settings_status_off">Start</string>
    <string name="settings_status_on">Stop</string>
    <string name="settings_status_off_summary">Service stopped</string>
    <string name="settings_status_on_summary">Service running</string>
    <string name="settings_buffer">Offline buffering</string>
    <string name="settings_buffer_off_summary">Buffering off</string>
    <string name="settings_buffer_on_summary">Buffering on</string>
    <string name="settings_wakelock">Wake lock</string>
    <string name="settings_wakelock_off_summary">Wake lock off</string>
    <string name="settings_wakelock_on_summary">Wake lock on</string>
    <string name="settings_accuracy_title">Location accuracy</string>
    <string name="settings_accuracy_summary">Desired location accuracy</string>
    <string name="settings_accuracy_high">High</string>
    <string name="settings_accuracy_medium">Medium</string>
    <string name="settings_accuracy_low">Low</string>
    <string name="settings_foreground_title">Foreground service</string>
    <string name="settings_foreground_summary">Increase service priority</string>

    <!-- OBA Preferences -->
    <string name="preferences_category_location">Location</string>
    <string name="preferences_category_advanced">Advanced</string>
    <string name="preferences_region_title">Your region</string>
    <string name="preferences_region_summary_custom_api">A custom API server is being used</string>
    <string name="preferences_auto_select_region_title">Automatic region</string>
    <string name="preferences_auto_select_region_summary">Set your current transit region based on your current location</string>

    <!-- Region list -->
    <plurals name="distance_miles">
        <item quantity="one">1 mile away</item>
        <!-- Entire element below should be on a single line if XML is reformatted - see #99 -->
        <item quantity="other">
            <xliff:g id="count">%s</xliff:g>
            miles away
        </item>
    </plurals>
    <plurals name="distance_feet">
        <item quantity="one">1 foot away</item>
        <!-- Entire element below should be on a single line if XML is reformatted - see #99 -->
        <item quantity="other">
            <xliff:g id="count">%s</xliff:g>
            feet away
        </item>
    </plurals>
    <plurals name="distance_kilometers">
        <item quantity="one">1 kilometer away</item>
        <!-- Entire element below should be on a single line if XML is reformatted - see #99 -->
        <item quantity="other">
            <xliff:g id="count">%s</xliff:g>
            kilometers away
        </item>
    </plurals>
    <plurals name="distance_meters">
        <item quantity="one">1 meter away</item>
        <!-- Entire element below should be on a single line if XML is reformatted - see #99 -->
        <item quantity="other">
            <xliff:g id="count">%s</xliff:g>
            meters away
        </item>
    </plurals>

    <string name="region_unavailable">unavailable</string>
    <string name="region_option_refresh">Refresh</string>
    <string name="region_detecting_server">Finding your transit services&#8230;</string>
    <string name="region_choose_region">Choose region</string>
    <string name="region_disabled_auto_selection">Disabled automatic region selection. You can enable in Preferences.</string>
    <string name="region_selected_auto">selected automatically</string>
    <string name="region_selected_manually">selected manually</string>
    <string name="region_region_found">Found %1$s region</string>
    <string name="preferences_experimental_regions_title">Experimental regions</string>
    <string name="preferences_experimental_regions_summary">Enables regions that may be unstable</string>
    <string name="preferences_experimental_regions_enable_warning">Experimental regions may be unstable and without real-time info! Go ahead?</string>
    <string name="preferences_experimental_regions_disable_warning">Your current experimental region won\'t be available! Go ahead?</string>

    <string name="oba_api_key_dialog_title">API Key for %1$s Region</string>
    <string name="oba_api_key_dialog_ok">Ok</string>
    <string name="preference_oba_api_key_summary">API Key to Access MyMetro Services</string>
    <string name="preference_oba_api_key_title">MyMetro API Key</string>

    <string name="preferences_preferred_units_title">Preferred distance units</string>
    <string name="preferences_preferred_units_option_automatic">Automatic</string>
    <string name="preferences_preferred_units_option_metric">Metric (km, m)</string>
    <string name="preferences_preferred_units_option_imperial">Imperial (mi, ft)</string>

    <string name="checkmark_description">Selection checkmark</string>
</resources>
