<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Nautilus Technology
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="@string/settings_category_traccar"
        android:title="@string/settings_category_traccar">

        <SwitchPreference
            android:defaultValue="false"
            android:key="status"
            android:summaryOff="@string/settings_status_off_summary"
            android:summaryOn="@string/settings_status_on_summary"
            android:switchTextOff="@string/settings_status_off"
            android:switchTextOn="@string/settings_status_on"
            android:title="@string/settings_status_title"
            app:isPreferenceVisible="false" />

        <EditTextPreference
            android:key="vehicle_id"
            android:title="@string/settings_id_title"
            app:isPreferenceVisible="false"/>

        <EditTextPreference
            android:defaultValue=""
            android:key="traccar_url"
            android:summary="@string/settings_url_summary"
            android:title="@string/settings_url_title"
            android:enabled="false" />

        <ListPreference
            android:defaultValue="medium"
            android:entries="@array/settings_accuracy_names"
            android:entryValues="@array/settings_accuracy_values"
            android:key="accuracy"
            android:summary="@string/settings_accuracy_summary"
            android:title="@string/settings_accuracy_title" />

        <EditTextPreference
            android:defaultValue="15"
            android:key="interval"
            android:inputType="number"
            android:summary="@string/settings_interval_summary"
            android:title="@string/settings_interval_title" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="distance"
            android:inputType="number"
            android:summary="@string/settings_distance_summary"
            android:title="@string/settings_distance_title"
            app:isPreferenceVisible="false" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="angle"
            android:inputType="number"
            android:summary="@string/settings_angle_summary"
            android:title="@string/settings_angle_title"
            app:isPreferenceVisible="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="buffer"
            android:summaryOff="@string/settings_buffer_off_summary"
            android:summaryOn="@string/settings_buffer_on_summary"
            android:title="@string/settings_buffer"
            app:isPreferenceVisible="false"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wakelock"
            android:summaryOff="@string/settings_wakelock_off_summary"
            android:summaryOn="@string/settings_wakelock_on_summary"
            android:title="@string/settings_wakelock"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/preferences_category_location"
        android:title="@string/preferences_category_location">
        <Preference
            android:key="@string/preference_key_region"
            android:title="@string/preferences_region_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_key_auto_select_region"
            android:summary="@string/preferences_auto_select_region_summary"
            android:title="@string/preferences_auto_select_region_title" />
        <EditTextPreference
            android:defaultValue=""
            android:inputType="textPassword|textWebPassword"
            android:key="@string/preference_key_oba_api_key"
            android:summary="@string/preference_oba_api_key_summary"
            android:title="@string/preference_oba_api_key_title" />

    </PreferenceCategory>
</PreferenceScreen>
