<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        app:showAsAction="withText"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="withText"
        android:title="@string/title_settings" />

    <item android:id="@+id/navigation_place_holder"
        android:title=""/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="withText"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_help"
        app:showAsAction="withText"
        android:title="@string/title_about" />
</menu>