<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Nautilus Technology
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<shortcuts
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="n_mr1">

    <shortcut
        android:shortcutId="start"
        android:enabled="true"
        android:icon="@mipmap/ic_start"
        android:shortcutShortLabel="@string/shortcut_start">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="au.mymetro.operator"
            android:targetClass="au.mymetro.operator.ShortcutActivity">
            <extra
                android:name="action"
                android:value="start" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="stop"
        android:enabled="true"
        android:icon="@mipmap/ic_stop"
        android:shortcutShortLabel="@string/shortcut_stop">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="au.mymetro.operator"
            android:targetClass="au.mymetro.operator.ShortcutActivity">
            <extra
                android:name="action"
                android:value="stop" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="sos"
        android:enabled="true"
        android:icon="@mipmap/ic_sos"
        android:shortcutShortLabel="@string/shortcut_sos">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="au.mymetro.operator"
            android:targetClass="au.mymetro.operator.ShortcutActivity">
            <extra
                android:name="action"
                android:value="sos" />
        </intent>
    </shortcut>

</shortcuts>
